--- a/ZJBTestOne/Podfile
+++ b/ZJBTestOne/Podfile
@@ -3,9 +3,9 @@ use_frameworks!
 platform :ios, ‘8.0’
 
 def shared_pods
-    pod 'SnapKit', '~> 3.2.0' #swift版本的约束
+    pod 'SnapKit', '~> 3.2.0' #swift版本的约束,相当于OC的masonry
     pod 'Moya', '~> 8.0.5' #高级的网络请求三方库
-    pod 'SwiftyJSON', '~> 3.1.4' #swift网络请求json解析
+    pod 'SwiftyJSON', '~> 3.1.4' #swift网络请求json解析,数据model解析
     pod 'IBAnimatable', '~> 4.1.0' #高级动画
     pod 'NVActivityIndicatorView', '~> 3.7.0' #loading框
     pod 'Kingfisher', '~> 3.10.3' #图片下载、缓存的框架,灵感取自于SDWebImage
