--- a/ZJBTestOne/Podfile
+++ b/ZJBTestOne/Podfile
@@ -9,7 +9,7 @@ def shared_pods
     pod 'IBAnimatable', '~> 4.1.0' #高级动画
     pod 'NVActivityIndicatorView', '~> 3.7.0' #loading框
     pod 'Kingfisher', '~> 3.10.3' #图片下载、缓存的框架,灵感取自于SDWebImage
-    pod 'DGElasticPullToRefresh', '~> 1.1' #下拉刷新
+    pod 'MJRefresh', '~> 3.1.14' #下拉刷新
 end
 
 target 'ZJBTestOne’ do
